--- a/PeepShow.ioc
+++ b/PeepShow.ioc
@@ -39,8 +39,11 @@ GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
 I2C3.Timing=0x00000E14
 KeepUserPlacement=false
-LPDMA1.IPParameters=PRIORITY_LL_LPDMACH0
-LPDMA1.PRIORITY_LL_LPDMACH0=DMA_LOW_PRIORITY_HIGH_WEIGHT
+LPDMA1.DIRECTION_LPDMACH0=DMA_MEMORY_TO_PERIPH
+LPDMA1.IPHANDLE_LPDMACH0-SIMPLEREQUEST_LPDMACH0=__NULL
+LPDMA1.IPParameters=IPHANDLE_LPDMACH0-SIMPLEREQUEST_LPDMACH0,REQUEST_LPDMACH0,DIRECTION_LPDMACH0,PRIORITY_LPDMACH0
+LPDMA1.PRIORITY_LPDMACH0=DMA_LOW_PRIORITY_HIGH_WEIGHT
+LPDMA1.REQUEST_LPDMACH0=LPDMA1_REQUEST_SPI3_TX
 LPUART1.BaudRate=9600
 LPUART1.IPParameters=BaudRate
 MMTAppReg1.MEMORYMAP.AP=RW_priv_only
@@ -180,6 +183,7 @@ NVIC.GPDMA1_Channel3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:tru
 NVIC.GPDMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.GPDMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.LPDMA1_Channel0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.LPUART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -187,6 +191,7 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.RTC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SAI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.SPI3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -206,7 +211,7 @@ PA0.Mode=OCTOSPI1_Port2_NCS
 PA0.PinAttribute=Free
 PA0.Signal=OCTOSPIM_P2_NCS
 PA1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI,PinAttribute
-PA1.GPIO_Label=BTN_B
+PA1.GPIO_Label=BTN_A
 PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA1.Locked=true
 PA1.PinAttribute=Free
@@ -296,7 +301,7 @@ PC14-OSC32_IN\ (PC14).Mode=LSE-External-Clock-Source
 PC14-OSC32_IN\ (PC14).PinAttribute=Free
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI,PinAttribute
-PC2.GPIO_Label=BTN_A
+PC2.GPIO_Label=BTN_B
 PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PC2.Locked=true
 PC2.PinAttribute=Free
@@ -361,7 +366,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_LPDMA1_Init-LPDMA1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,10-MX_SAI1_Init-SAI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_LPDMA1_Init-LPDMA1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,10-MX_SAI1_Init-SAI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_ICACHE_Init-ICACHE-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=24000000
 RCC.AHBFreq_Value=24000000
@@ -478,13 +483,13 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI3.CalculateBaudRate=250.0 KBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI3.CalculateBaudRate=1000.0 KBits/s
 SPI3.Direction=SPI_DIRECTION_1LINE
 SPI3.FirstBit=SPI_FIRSTBIT_MSB
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,FirstBit,TriggerState
 SPI3.Mode=SPI_MODE_MASTER
-SPI3.TriggerState=SPI_AUTO_MODE_ENABLE
+SPI3.TriggerState=SPI_AUTO_MODE_DISABLE
 SPI3.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.CMSISJjRTOS2_Checked=true
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.INCLUDE_pcTaskGetTaskName=1
@@ -493,7 +498,7 @@ STMicroelectronics.X-CUBE-FREERTOS.1.2.0.IPParameters=RTOS2CcCMSISJjRTOS2JjCore,
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi4
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configCHECK_FOR_STACK_OVERFLOW=2
-STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configTOTAL_HEAP_SIZE=20480
+STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configTOTAL_HEAP_SIZE=65536
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configUSE_MALLOC_FAILED_HOOK=1
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configUSE_TICKLESS_IDLE=1
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0_SwParameter=RTOS2CcCMSISJjRTOS2JjHeap\:HeapIi4;RTOS2CcCMSISJjRTOS2JjCore\:TZIiNonIiSupported;
@@ -519,7 +524,7 @@ VP_LPBAM_VS_SIG1.Mode=SmartRun
 VP_LPBAM_VS_SIG1.Signal=LPBAM_VS_SIG1
 VP_LPBAM_VS_SIG4.Mode=LPDMA1
 VP_LPBAM_VS_SIG4.Signal=LPBAM_VS_SIG4
-VP_LPDMA1_VS_LPDMACH0.Mode=LINKEDLIST_LPDMACH0
+VP_LPDMA1_VS_LPDMACH0.Mode=SIMPLEREQUEST_LPDMACH0
 VP_LPDMA1_VS_LPDMACH0.Signal=LPDMA1_VS_LPDMACH0
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
@@ -542,27 +547,27 @@ VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.2.0.Signal=STMicr
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=custom
-rtos.0.binarySems.0=allocationType,Static;controlBlockName,semWakeCB;initialState,Depleted;name,semWake
+rtos.0.binarySems.0=allocationType,Dynamic;controlBlockName,NULL;initialState,Depleted;name,semWake
 rtos.0.events.0=allocationType,Static;controlBlockName,egModeCB;name,egMode
 rtos.0.events.1=allocationType,Static;controlBlockName,egPowerCB;name,egPower
 rtos.0.events.2=allocationType,Static;controlBlockName,egDebugCB;name,egDebug
 rtos.0.ip=STMicroelectronics.X-CUBE-FREERTOS.1.2.0
-rtos.0.mutexes.0=allocationType,Static;controlBlockName,mtxLogCB;name,mtxLog
-rtos.0.mutexes.1=allocationType,Static;controlBlockName,mtxSettingsCB;name,mtxSettings
-rtos.0.queues.0=allocationType,Static;bufferName,qUIEventsBuf;controlBlockName,qUIEventsCB;itemNumber,16;itemSize,16;name,qUIEvents
-rtos.0.queues.1=allocationType,Static;bufferName,qGameEventsBuf;controlBlockName,qGameEventsCB;itemNumber,16;itemSize,16;name,qGameEvents
-rtos.0.queues.2=allocationType,Static;bufferName,qSysEventsBuf;controlBlockName,qSysEventsCB;itemNumber,16;itemSize,16;name,qSysEvents
-rtos.0.queues.3=allocationType,Static;bufferName,qDisplayCmdBuf;controlBlockName,qDisplayCmdCB;itemNumber,16;itemSize,16;name,qDisplayCmd
-rtos.0.queues.4=allocationType,Static;bufferName,qAudioCmdBuf;controlBlockName,qAudioCmdCB;itemNumber,16;itemSize,16;name,qAudioCmd
-rtos.0.queues.5=allocationType,Static;bufferName,qStorageReqBuf;controlBlockName,qStorageReqCB;itemNumber,24;itemSize,8;name,qStorageReq
-rtos.0.queues.6=allocationType,Static;bufferName,qSensorReqBuf;controlBlockName,qSensorReqCB;itemNumber,16;itemSize,8;name,qSensorReq
-rtos.0.tasks.0=allocationType,Static;bufferName,tskDisplayStack;codeGen,Default;controlBlockName,tskDisplayTCB;entry,StartTaskDisplay;name,tskDisplay;parameter,NULL;priority,osPriorityHigh;stackSize,1024
-rtos.0.tasks.1=allocationType,Static;bufferName,tskUIStack;codeGen,Default;controlBlockName,tskUITCB;entry,StartTaskUI;name,tskUI;parameter,NULL;priority,osPriorityNormal;stackSize,768
-rtos.0.tasks.2=allocationType,Static;bufferName,tskInputStack;codeGen,Default;controlBlockName,tskInputTCB;entry,StartTaskInput;name,tskInput;parameter,NULL;priority,osPriorityAboveNormal;stackSize,384
-rtos.0.tasks.3=allocationType,Static;bufferName,tskPowerStack;codeGen,Default;controlBlockName,tskPowerTCB;entry,StartTaskPower;name,tskPower;parameter,NULL;priority,osPriorityBelowNormal;stackSize,384
-rtos.0.tasks.4=allocationType,Static;bufferName,tskSensorStack;codeGen,Default;controlBlockName,tskSensorTCB;entry,StartTaskSensor;name,tskSensor;parameter,NULL;priority,osPriorityBelowNormal;stackSize,384
-rtos.0.tasks.5=allocationType,Static;bufferName,tskStorageStack;codeGen,Default;controlBlockName,tskStorageTCB;entry,StartTaskFileSystem;name,tskStorage;parameter,NULL;priority,osPriorityLow;stackSize,1024
-rtos.0.tasks.6=allocationType,Static;bufferName,tskGameStack;codeGen,Default;controlBlockName,tskGameTCB;entry,StartTaskGame;name,tskGame;parameter,NULL;priority,osPriorityNormal;stackSize,768
-rtos.0.tasks.7=allocationType,Static;bufferName,tskAudioStack;codeGen,Default;controlBlockName,tskAudioTCB;entry,StartTaskAudio;name,tskAudio;parameter,NULL;priority,osPriorityRealtime;stackSize,512
-rtos.0.timers.0=allocationType,Static;codeGen,Default;controlBlockName,tmrInactivityCB;entry,tmrInactivityCb;name,tmrInactivity;parameter,NULL;type,osTimerOnce
-rtos.0.timers.1=allocationType,Static;codeGen,Default;controlBlockName,tmrUITickCB;entry,UITickTimerCb;name,tmrUITick;parameter,NULL;type,osTimerPeriodic
+rtos.0.mutexes.0=allocationType,Dynamic;controlBlockName,NULL;name,mtxLog
+rtos.0.mutexes.1=allocationType,Dynamic;controlBlockName,NULL;name,mtxSettings
+rtos.0.queues.0=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,16;itemSize,16;name,qUIEvents
+rtos.0.queues.1=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,16;itemSize,16;name,qGameEvents
+rtos.0.queues.2=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,16;itemSize,16;name,qSysEvents
+rtos.0.queues.3=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,16;itemSize,16;name,qDisplayCmd
+rtos.0.queues.4=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,16;itemSize,16;name,qAudioCmd
+rtos.0.queues.5=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,24;itemSize,8;name,qStorageReq
+rtos.0.queues.6=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,16;itemSize,8;name,qSensorReq
+rtos.0.tasks.0=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskDisplay;name,tskDisplay;parameter,NULL;priority,osPriorityHigh;stackSize,1024
+rtos.0.tasks.1=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskUI;name,tskUI;parameter,NULL;priority,osPriorityNormal;stackSize,768
+rtos.0.tasks.2=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskInput;name,tskInput;parameter,NULL;priority,osPriorityAboveNormal;stackSize,384
+rtos.0.tasks.3=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskPower;name,tskPower;parameter,NULL;priority,osPriorityBelowNormal;stackSize,384
+rtos.0.tasks.4=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskSensor;name,tskSensor;parameter,NULL;priority,osPriorityBelowNormal;stackSize,384
+rtos.0.tasks.5=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskFileSystem;name,tskStorage;parameter,NULL;priority,osPriorityLow;stackSize,1024
+rtos.0.tasks.6=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskGame;name,tskGame;parameter,NULL;priority,osPriorityNormal;stackSize,768
+rtos.0.tasks.7=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskAudio;name,tskAudio;parameter,NULL;priority,osPriorityRealtime;stackSize,512
+rtos.0.timers.0=allocationType,Dynamic;codeGen,Default;controlBlockName,NULL;entry,tmrInactivityCb;name,tmrInactivity;parameter,NULL;type,osTimerOnce
+rtos.0.timers.1=allocationType,Dynamic;codeGen,Default;controlBlockName,NULL;entry,UITickTimerCb;name,tmrUITick;parameter,NULL;type,osTimerPeriodic
