rtos isr bridge established

--- a/PeepShow.ioc
+++ b/PeepShow.ioc
@@ -8,25 +8,21 @@ GPDMA1.BLKHWREQUEST_GPDMACH3-SIMPLEREQUEST_GPDMACH3=DMA_BREQ_BLOCK
 GPDMA1.BLKHWREQUEST_GPDMACH4-SIMPLEREQUEST_GPDMACH4=DMA_BREQ_BLOCK
 GPDMA1.BLKHWREQUEST_GPDMACH5-SIMPLEREQUEST_GPDMACH5=DMA_BREQ_BLOCK
 GPDMA1.DESTDATAWIDTH_GPDMACH3=DMA_DEST_DATAWIDTH_HALFWORD
-GPDMA1.DESTINC_GPDMACH1=DMA_DINC_INCREMENTED
 GPDMA1.DESTINC_GPDMACH4=DMA_DINC_INCREMENTED
 GPDMA1.DIRECTION_GPDMACH2=DMA_MEMORY_TO_PERIPH
 GPDMA1.DIRECTION_GPDMACH3=DMA_MEMORY_TO_PERIPH
 GPDMA1.DIRECTION_GPDMACH4=DMA_PERIPH_TO_MEMORY
 GPDMA1.DIRECTION_GPDMACH5=DMA_MEMORY_TO_PERIPH
 GPDMA1.DMAHANDLE_GPDMACH3=hdmatx
-GPDMA1.IPHANDLE_GPDMACH1-SIMPLEREQUEST_GPDMACH1=__NULL
 GPDMA1.IPHANDLE_GPDMACH2-SIMPLEREQUEST_GPDMACH2=__NULL
 GPDMA1.IPHANDLE_GPDMACH3-SIMPLEREQUEST_GPDMACH3=__NULL
 GPDMA1.IPHANDLE_GPDMACH4-SIMPLEREQUEST_GPDMACH4=__NULL
 GPDMA1.IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMACH5=__NULL
-GPDMA1.IPParameters=REQUEST_GPDMACH1,DESTINC_GPDMACH1,PRIORITY_GPDMACH1,REQUEST_GPDMACH2,DIRECTION_GPDMACH2,SRCINC_GPDMACH2,PRIORITY_GPDMACH2,REQUEST_GPDMACH3,DMAHANDLE_GPDMACH3,DIRECTION_GPDMACH3,PRIORITY_GPDMACH3,SRCINC_GPDMACH3,SRCDATAWIDTH_GPDMACH3,DESTDATAWIDTH_GPDMACH3,REQUEST_GPDMACH4,PRIORITY_GPDMACH4,DIRECTION_GPDMACH4,DESTINC_GPDMACH4,REQUEST_GPDMACH5,DIRECTION_GPDMACH5,PRIORITY_GPDMACH5,SRCINC_GPDMACH5,IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMACH5,BLKHWREQUEST_GPDMACH5-SIMPLEREQUEST_GPDMACH5,IPHANDLE_GPDMACH4-SIMPLEREQUEST_GPDMACH4,BLKHWREQUEST_GPDMACH4-SIMPLEREQUEST_GPDMACH4,IPHANDLE_GPDMACH3-SIMPLEREQUEST_GPDMACH3,BLKHWREQUEST_GPDMACH3-SIMPLEREQUEST_GPDMACH3,IPHANDLE_GPDMACH2-SIMPLEREQUEST_GPDMACH2,IPHANDLE_GPDMACH1-SIMPLEREQUEST_GPDMACH1
-GPDMA1.PRIORITY_GPDMACH1=DMA_LOW_PRIORITY_MID_WEIGHT
+GPDMA1.IPParameters=REQUEST_GPDMACH2,DIRECTION_GPDMACH2,SRCINC_GPDMACH2,PRIORITY_GPDMACH2,REQUEST_GPDMACH3,DMAHANDLE_GPDMACH3,DIRECTION_GPDMACH3,PRIORITY_GPDMACH3,SRCINC_GPDMACH3,SRCDATAWIDTH_GPDMACH3,DESTDATAWIDTH_GPDMACH3,REQUEST_GPDMACH4,PRIORITY_GPDMACH4,DIRECTION_GPDMACH4,DESTINC_GPDMACH4,REQUEST_GPDMACH5,DIRECTION_GPDMACH5,PRIORITY_GPDMACH5,SRCINC_GPDMACH5,IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMACH5,BLKHWREQUEST_GPDMACH5-SIMPLEREQUEST_GPDMACH5,IPHANDLE_GPDMACH4-SIMPLEREQUEST_GPDMACH4,BLKHWREQUEST_GPDMACH4-SIMPLEREQUEST_GPDMACH4,IPHANDLE_GPDMACH3-SIMPLEREQUEST_GPDMACH3,BLKHWREQUEST_GPDMACH3-SIMPLEREQUEST_GPDMACH3,IPHANDLE_GPDMACH2-SIMPLEREQUEST_GPDMACH2
 GPDMA1.PRIORITY_GPDMACH2=DMA_LOW_PRIORITY_MID_WEIGHT
 GPDMA1.PRIORITY_GPDMACH3=DMA_HIGH_PRIORITY
 GPDMA1.PRIORITY_GPDMACH4=DMA_LOW_PRIORITY_HIGH_WEIGHT
 GPDMA1.PRIORITY_GPDMACH5=DMA_LOW_PRIORITY_HIGH_WEIGHT
-GPDMA1.REQUEST_GPDMACH1=GPDMA1_REQUEST_USART1_RX
 GPDMA1.REQUEST_GPDMACH2=GPDMA1_REQUEST_USART1_TX
 GPDMA1.REQUEST_GPDMACH3=GPDMA1_REQUEST_SAI1_A
 GPDMA1.REQUEST_GPDMACH4=GPDMA1_REQUEST_OCTOSPI1
@@ -132,33 +128,32 @@ Mcu.Pin32=PB7
 Mcu.Pin33=PH3-BOOT0
 Mcu.Pin34=PB8
 Mcu.Pin35=PB9
-Mcu.Pin36=VP_GPDMA1_VS_GPDMACH1
-Mcu.Pin37=VP_GPDMA1_VS_GPDMACH2
-Mcu.Pin38=VP_GPDMA1_VS_GPDMACH3
-Mcu.Pin39=VP_GPDMA1_VS_GPDMACH4
+Mcu.Pin36=VP_GPDMA1_VS_GPDMACH2
+Mcu.Pin37=VP_GPDMA1_VS_GPDMACH3
+Mcu.Pin38=VP_GPDMA1_VS_GPDMACH4
+Mcu.Pin39=VP_GPDMA1_VS_GPDMACH5
 Mcu.Pin4=PC2
-Mcu.Pin40=VP_GPDMA1_VS_GPDMACH5
-Mcu.Pin41=VP_ICACHE_VS_ICACHE
-Mcu.Pin42=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin43=VP_LPDMA1_VS_LPDMACH0
-Mcu.Pin44=VP_OCTOSPI1_VS_quad
-Mcu.Pin45=VP_PWR_VS_SECSignals
-Mcu.Pin46=VP_PWR_VS_LPOM
-Mcu.Pin47=VP_RTC_VS_RTC_Activate
-Mcu.Pin48=VP_RTC_VS_RTC_Calendar
-Mcu.Pin49=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin40=VP_ICACHE_VS_ICACHE
+Mcu.Pin41=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin42=VP_LPDMA1_VS_LPDMACH0
+Mcu.Pin43=VP_OCTOSPI1_VS_quad
+Mcu.Pin44=VP_PWR_VS_SECSignals
+Mcu.Pin45=VP_PWR_VS_LPOM
+Mcu.Pin46=VP_RTC_VS_RTC_Activate
+Mcu.Pin47=VP_RTC_VS_RTC_Calendar
+Mcu.Pin48=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin49=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
 Mcu.Pin5=PC3
-Mcu.Pin50=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-Mcu.Pin51=VP_SYS_VS_tim6
-Mcu.Pin52=VP_LPBAM_VS_SIG1
-Mcu.Pin53=VP_LPBAM_VS_SIG4
-Mcu.Pin54=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin55=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.2.0
+Mcu.Pin50=VP_SYS_VS_tim6
+Mcu.Pin51=VP_LPBAM_VS_SIG1
+Mcu.Pin52=VP_LPBAM_VS_SIG4
+Mcu.Pin53=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin54=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.2.0
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=56
+Mcu.PinsNb=55
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-FREERTOS.1.2.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -177,7 +172,6 @@ NVIC.EXTI6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI8_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI9_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.GPDMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.GPDMA1_Channel2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.GPDMA1_Channel3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.GPDMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -231,10 +225,11 @@ PA3.GPIOParameters=PinAttribute
 PA3.Mode=Asynchronous
 PA3.PinAttribute=Free
 PA3.Signal=LPUART1_RX
-PA4.GPIOParameters=GPIO_Label,PinAttribute
+PA4.GPIOParameters=PinState,GPIO_Label,PinAttribute
 PA4.GPIO_Label=VLT_E5
 PA4.Locked=true
 PA4.PinAttribute=Free
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
 PA6.GPIOParameters=PinAttribute
 PA6.Mode=OCTOSPI1_IOL_Port1L
@@ -270,8 +265,9 @@ PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PB8.GPIOParameters=GPIO_Label
+PB8.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB8.GPIO_Label=BTN_L
+PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PB8.Signal=GPXTI8
 PB9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB9.GPIO_Label=BTN_R
@@ -287,8 +283,9 @@ PC1.PinAttribute=Free
 PC1.Signal=I2C3_SDA
 PC10.Mode=Simplex_Bidirectional_Master
 PC10.Signal=SPI3_SCK
-PC11.GPIOParameters=GPIO_Label
+PC11.GPIOParameters=PinState,GPIO_Label
 PC11.GPIO_Label=VLT_LCD
+PC11.PinState=GPIO_PIN_SET
 PC11.Signal=GPIO_Output
 PC12.Mode=Simplex_Bidirectional_Master
 PC12.Signal=SPI3_MOSI
@@ -306,10 +303,11 @@ PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PC2.Locked=true
 PC2.PinAttribute=Free
 PC2.Signal=GPXTI2
-PC3.GPIOParameters=GPIO_Label,PinAttribute
+PC3.GPIOParameters=PinState,GPIO_Label,PinAttribute
 PC3.GPIO_Label=E5_RST
 PC3.Locked=true
 PC3.PinAttribute=Free
+PC3.PinState=GPIO_PIN_SET
 PC3.Signal=GPIO_Output
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=E5_BOOT
@@ -326,8 +324,9 @@ PC9.Signal=GPIO_Output
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=SPI3_CS
 PD2.Signal=GPIO_Output
-PH3-BOOT0.GPIOParameters=GPIO_Label
+PH3-BOOT0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PH3-BOOT0.GPIO_Label=BTN_BOOT
+PH3-BOOT0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PH3-BOOT0.Locked=true
 PH3-BOOT0.Signal=GPXTI3
 PWR.DMA2DPowerDownInStopMode=PWR_DMA2DRAM_FULL_STOP_RETENTION
@@ -506,8 +505,6 @@ USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,WordLength,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART1.WordLength=WORDLENGTH_8B
-VP_GPDMA1_VS_GPDMACH1.Mode=SIMPLEREQUEST_GPDMACH1
-VP_GPDMA1_VS_GPDMACH1.Signal=GPDMA1_VS_GPDMACH1
 VP_GPDMA1_VS_GPDMACH2.Mode=SIMPLEREQUEST_GPDMACH2
 VP_GPDMA1_VS_GPDMACH2.Signal=GPDMA1_VS_GPDMACH2
 VP_GPDMA1_VS_GPDMACH3.Mode=SIMPLEREQUEST_GPDMACH3
@@ -561,6 +558,7 @@ rtos.0.queues.3=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;ite
 rtos.0.queues.4=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,16;itemSize,16;name,qAudioCmd
 rtos.0.queues.5=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,24;itemSize,8;name,qStorageReq
 rtos.0.queues.6=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,16;itemSize,8;name,qSensorReq
+rtos.0.queues.7=allocationType,Dynamic;bufferName,NULL;controlBlockName,NULL;itemNumber,16;itemSize,4;name,qInput
 rtos.0.tasks.0=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskDisplay;name,tskDisplay;parameter,NULL;priority,osPriorityHigh;stackSize,1024
 rtos.0.tasks.1=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskUI;name,tskUI;parameter,NULL;priority,osPriorityNormal;stackSize,768
 rtos.0.tasks.2=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartTaskInput;name,tskInput;parameter,NULL;priority,osPriorityAboveNormal;stackSize,384
