--- a/PeepShow.ioc
+++ b/PeepShow.ioc
@@ -37,9 +37,10 @@ I2C3.Timing=0x00000E14
 KeepUserPlacement=false
 LPDMA1.DIRECTION_LPDMACH0=DMA_MEMORY_TO_PERIPH
 LPDMA1.IPHANDLE_LPDMACH0-SIMPLEREQUEST_LPDMACH0=__NULL
-LPDMA1.IPParameters=IPHANDLE_LPDMACH0-SIMPLEREQUEST_LPDMACH0,REQUEST_LPDMACH0,DIRECTION_LPDMACH0,PRIORITY_LPDMACH0
+LPDMA1.IPParameters=IPHANDLE_LPDMACH0-SIMPLEREQUEST_LPDMACH0,REQUEST_LPDMACH0,DIRECTION_LPDMACH0,PRIORITY_LPDMACH0,SRCINC_LPDMACH0
 LPDMA1.PRIORITY_LPDMACH0=DMA_LOW_PRIORITY_HIGH_WEIGHT
 LPDMA1.REQUEST_LPDMACH0=LPDMA1_REQUEST_SPI3_TX
+LPDMA1.SRCINC_LPDMACH0=DMA_SINC_INCREMENTED
 LPUART1.BaudRate=9600
 LPUART1.IPParameters=BaudRate
 MMTAppReg1.MEMORYMAP.AP=RW_priv_only
@@ -235,9 +236,7 @@ PA6.GPIOParameters=PinAttribute
 PA6.Mode=OCTOSPI1_IOL_Port1L
 PA6.PinAttribute=Free
 PA6.Signal=OCTOSPIM_P1_IO3
-PA7.GPIOParameters=PinAttribute
 PA7.Mode=OCTOSPI1_IOL_Port1L
-PA7.PinAttribute=
 PA7.Signal=OCTOSPIM_P1_IO2
 PA8.Mode=SAI_A_Master
 PA8.Signal=SAI1_SCK_A
@@ -485,15 +484,16 @@ SH.GPXTI9.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI3.CalculateBaudRate=1000.0 KBits/s
 SPI3.Direction=SPI_DIRECTION_1LINE
-SPI3.FirstBit=SPI_FIRSTBIT_MSB
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,FirstBit,TriggerState
+SPI3.FirstBit=SPI_FIRSTBIT_LSB
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,FirstBit,TriggerState,NSSPMode
 SPI3.Mode=SPI_MODE_MASTER
+SPI3.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI3.TriggerState=SPI_AUTO_MODE_DISABLE
 SPI3.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.CMSISJjRTOS2_Checked=true
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.INCLUDE_pcTaskGetTaskName=1
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.INCLUDE_xEventGroupSetBitFromISR=1
-STMicroelectronics.X-CUBE-FREERTOS.1.2.0.IPParameters=RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap,configUSE_TICKLESS_IDLE,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,INCLUDE_pcTaskGetTaskName,INCLUDE_xEventGroupSetBitFromISR
+STMicroelectronics.X-CUBE-FREERTOS.1.2.0.IPParameters=configUSE_TICKLESS_IDLE,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,INCLUDE_pcTaskGetTaskName,INCLUDE_xEventGroupSetBitFromISR,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi4
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configCHECK_FOR_STACK_OVERFLOW=2
