--- a/PeepShow.ioc
+++ b/PeepShow.ioc
@@ -493,10 +493,11 @@ SPI3.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.CMSISJjRTOS2_Checked=true
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.INCLUDE_pcTaskGetTaskName=1
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.INCLUDE_xEventGroupSetBitFromISR=1
-STMicroelectronics.X-CUBE-FREERTOS.1.2.0.IPParameters=configUSE_TICKLESS_IDLE,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,INCLUDE_pcTaskGetTaskName,INCLUDE_xEventGroupSetBitFromISR,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
+STMicroelectronics.X-CUBE-FREERTOS.1.2.0.IPParameters=configUSE_TICKLESS_IDLE,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,INCLUDE_pcTaskGetTaskName,INCLUDE_xEventGroupSetBitFromISR,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap,configENABLE_FPU
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi4
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configCHECK_FOR_STACK_OVERFLOW=2
+STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configENABLE_FPU=1
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configTOTAL_HEAP_SIZE=65536
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configUSE_MALLOC_FAILED_HOOK=1
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configUSE_TICKLESS_IDLE=1
