--- a/PeepShow.ioc
+++ b/PeepShow.ioc
@@ -280,13 +280,13 @@ PC1.GPIOParameters=PinAttribute
 PC1.Mode=I2C
 PC1.PinAttribute=Free
 PC1.Signal=I2C3_SDA
-PC10.Mode=Simplex_Bidirectional_Master
+PC10.Mode=TX_Only_Simplex_Unidirect_Master
 PC10.Signal=SPI3_SCK
 PC11.GPIOParameters=PinState,GPIO_Label
 PC11.GPIO_Label=VLT_LCD
 PC11.PinState=GPIO_PIN_SET
 PC11.Signal=GPIO_Output
-PC12.Mode=Simplex_Bidirectional_Master
+PC12.Mode=TX_Only_Simplex_Unidirect_Master
 PC12.Signal=SPI3_MOSI
 PC13.GPIOParameters=PinAttribute
 PC13.Mode=Calibration_1Hz
@@ -364,7 +364,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_LPDMA1_Init-LPDMA1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,10-MX_SAI1_Init-SAI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_ICACHE_Init-ICACHE-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_LPDMA1_Init-LPDMA1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,10-MX_SAI1_Init-SAI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=24000000
 RCC.AHBFreq_Value=24000000
@@ -483,7 +483,7 @@ SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI3.CalculateBaudRate=1000.0 KBits/s
-SPI3.Direction=SPI_DIRECTION_1LINE
+SPI3.Direction=SPI_DIRECTION_2LINES_TXONLY
 SPI3.FirstBit=SPI_FIRSTBIT_LSB
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,FirstBit,TriggerState,NSSPMode
 SPI3.Mode=SPI_MODE_MASTER
