--- a/PeepShow.ioc
+++ b/PeepShow.ioc
@@ -364,7 +364,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_LPDMA1_Init-LPDMA1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,10-MX_SAI1_Init-SAI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_LPDMA1_Init-LPDMA1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,10-MX_SAI1_Init-SAI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_ICACHE_Init-ICACHE-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=24000000
 RCC.AHBFreq_Value=24000000
@@ -452,6 +452,8 @@ RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOPLL2OutputFreq_Value=512000000
 RCC.VCOPLL3OutputFreq_Value=221333333.3333333
+RTC.IPParameters=rtcPrivilegeFull
+RTC.rtcPrivilegeFull=RTC_PRIVILEGE_FULL_NO
 SAI1.AudioFrequency-SAI_A_Master=SAI_AUDIO_FREQUENCY_16K
 SAI1.ErrorAudioFreq-SAI_A_Master=45.22 %
 SAI1.IPParameters=Instance-SAI_A_Master,VirtualMode-SAI_A_Master,MckOutput-SAI_A_Master,RealAudioFreq-SAI_A_Master,ErrorAudioFreq-SAI_A_Master,InitProtocol-SAI_A_Master,VirtualProtocol-SAI_A_BASIC,AudioFrequency-SAI_A_Master,NoDivider-SAI_A_Master,OutputDrive-SAI_A_Master
@@ -481,8 +483,8 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI3.CalculateBaudRate=1000.0 KBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI3.CalculateBaudRate=2.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES_TXONLY
 SPI3.FirstBit=SPI_FIRSTBIT_LSB
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,FirstBit,TriggerState,NSSPMode
@@ -493,7 +495,7 @@ SPI3.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.CMSISJjRTOS2_Checked=true
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.INCLUDE_pcTaskGetTaskName=1
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.INCLUDE_xEventGroupSetBitFromISR=1
-STMicroelectronics.X-CUBE-FREERTOS.1.2.0.IPParameters=configUSE_TICKLESS_IDLE,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,INCLUDE_pcTaskGetTaskName,INCLUDE_xEventGroupSetBitFromISR,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap,configENABLE_FPU
+STMicroelectronics.X-CUBE-FREERTOS.1.2.0.IPParameters=configUSE_TICKLESS_IDLE,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,INCLUDE_pcTaskGetTaskName,INCLUDE_xEventGroupSetBitFromISR,configENABLE_FPU,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi4
 STMicroelectronics.X-CUBE-FREERTOS.1.2.0.configCHECK_FOR_STACK_OVERFLOW=2
